ThreadSafeBankAccount2-2-StepTermination